Fixing spacing around card

--- a/css/style.scss
+++ b/css/style.scss
@@ -110,13 +110,13 @@ img {
 .back {
   opacity: 0;
   position: absolute;
-  top: 52%;
+  top: 55%;
   left: 0;
   right: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1em;
+  gap: 1.5em;
 
   .streaming-info {
     columns: 2;
@@ -152,7 +152,8 @@ img {
   //rank moves on hover
   .rank {
     //rank moves on hover
-    transform: translate(150%, -74%);
+      //translate 2nd # is moving it down
+    transform: translate(150%, -61%);
   }
   .front {
     //translateY is up & down/vertical axis
@@ -191,7 +192,8 @@ img {
       opacity 100ms linear;
     opacity: 1;
     //shorter than it is tall
-    transform: scale(1.4, 1.2);
+      //translate for even sides all around
+    transform: scale(1.35, 1.2) translateY(5%);
   }
 }
 
